--- a/views/index.html
+++ b/views/index.html
@@ -102,7 +102,7 @@
                             <ul>
                                 <li><a href="javascript:redirect('');">主页</a></li>
                                 <li><a href="javascript:redirect('about');">关于我们</a></li>
-                                <li><a href="javascript:redirect('service');">所有服务</a></li>
+                                <li><a href="javascript:redirect('service');">简历模板</a></li>
                                 <li><a href="javascript:redirect('contact');">联系我们</a></li>
                                 <li><a href="/login">注册/登录</a></li>
                             {{/*<li class="menu-item-has-children"><a href="#">Portfolio</a>
@@ -235,7 +235,7 @@
     <!--所有服务-->
     <div id="service" class="container margin-top">
         <div class="main-title">
-            <h1>我们能做什么?</h1>
+            <h1>所有简历模板</h1>
             <hr>
             <h6>Laborious to obtain some advantage from it</h6>
         </div>
