--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -222,11 +222,40 @@
 		margin-right: 0;
 	}
 
+	.works-filter{
+		line-height: 18px;
+		float: left;
+		margin-bottom: 15px;
+	}
+
 	.works-filter a {
 	    display: inline-block;
-	    font-size: 13px;
+	    font-size: 18px;
 	    padding-right: 0;
-	    padding-left: 4px;
+		margin-top: 15px;
+	}
+
+	.img .like-product{
+		opacity: 1;
+	}
+	.img .overlay-thumb{
+		background-color: rgba(0, 0, 0, 0.75);
+	}
+	.details span.title{
+		font-size: 20px;
+	}
+	.details {
+		padding: 20px;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		color: #ffffff;
+		z-index: 3;
+		border: 0px solid red;
+	}
+	.details span{
+		opacity: 1;
+		top:0px;
 	}
 
 	.tabs-wrapper {
