--- a/static/resume/resume001/css/style.css
+++ b/static/resume/resume001/css/style.css
@@ -411,32 +411,32 @@ p {
   margin: 0 auto;
   opacity: 0.6;
 }
-.year {
+
+.company {
   font-size: 26px;
+  color: #333;
+  display: inline-block;
+  padding-bottom: 15px;
+  width: 100%;
   font-weight: 500;
-  margin-bottom: 10px;
-  font-family: 'Roboto', sans-serif;
+  border-bottom:3px solid #818181;
 }
+
 .job {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 14px;
+  font-size: 18px;
+  font-weight: 300;
   letter-spacing: 0.4px;
   text-transform: uppercase;
-  color: #cccccc;
 }
-.company {
-  font-size: 12px;
-  line-height: 14px;
-  border: 1px solid #ececec;
-  color: #cccccc;
-  padding:8px 10px;
-  border-radius: 6px;
-  display: inline-block;
-  margin-top: 5px;
-  font-weight: 400;
 
+.year {
+  font-size: 16px;
+  font-weight: 300;
+  margin-bottom: 10px;
+  border: 0px solid #eee;
+  font-family: 'Roboto', sans-serif;
 }
+
 
 /*----------------------------------------- 6) Hero --------------------------------------------------*/
 #home {
