--- a/views/index.html
+++ b/views/index.html
@@ -249,7 +249,7 @@
                 </span>
             </button>
             <div class="works-filter">
-                <a href="javascript:void(0)" class="filter active" data-filter="全部">全部</a>
+                <a href="javascript:void(0)" class="filter active" style="margin-left: -10px;" data-filter="全部">全部</a>
                 <a href="javascript:void(0)" class="filter" data-filter="时尚创意">时尚创意</a>
                 <a href="javascript:void(0)" class="filter" data-filter="现代商务">现代商务</a>
                 <a href="javascript:void(0)" class="filter" data-filter="文艺清新">文艺清新</a>
@@ -574,6 +574,7 @@
     <script src="../static/js/vendor/wow.min.js"></script>
     <script src="../static/js/main.js"></script>
     <script src="../static/js/ajax.js"></script>
+    <script src="../static/js/util.js"></script>
     <script>
 
         $(function () {
