--- a/views/login/login.html
+++ b/views/login/login.html
@@ -10,8 +10,8 @@
     <link rel="icon" type="image/ico" href="../../static/img/logo/logoPic.png">
 
     <!--Sweet alert-->
-    <link href="https://cdn.staticfile.org/limonte-sweetalert2/7.28.9/sweetalert2.min.css" rel="stylesheet">
-    <script src="https://cdn.staticfile.org/limonte-sweetalert2/7.28.9/sweetalert2.min.js" ></script>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.css">
+    <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
 	<!-- VENDOR CSS -->
     <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,6 +26,9 @@
 	<link rel="apple-touch-icon" sizes="76x76" href="../../static/back/assets/img/apple-icon.png">
 
 	<link rel="stylesheet" href="../../static/css/util.css">
+    <link href="https://cdn.bootcss.com/bootstrap-switch/4.0.0-alpha.1/css/bootstrap-switch.min.css" rel="stylesheet">
+
+
 
 
 	<style>
@@ -48,54 +51,12 @@
 			color: #6195FF;
 		}
 
-		.swal2-modal{
-            width: 500px; padding: 20px; background: rgb(255, 255, 255); display: block; min-height: 325px;
-		}
-
-        .swal2-modal .swal2-title {
-            color: #595959;
-            font-size: 30px;
-            text-align: center;
-            font-weight: 600;
-            text-transform: none;
-            position: relative;
-            margin: 0 0 .4em;
-            padding: 0;
-            display: block;
-            word-wrap: break-word;
-        }
-
-        .swal2-modal .swal2-content {
-            font-size: 18px;
-            text-align: center;
-            font-weight: 300;
-            position: relative;
-            float: none;
-            margin: 0;
-            padding: 0;
-            line-height: normal;
-            color: #545454;
-            word-wrap: break-word;
-        }
-
-        .swal2-modal .swal2-styled {
-            border: 0;
-            border-radius: 3px;
-            box-shadow: none;
-            color: #fff;
-            cursor: pointer;
-            font-size: 17px;
-            font-weight: 500;
-            margin: 15px 5px 0;
-            padding: 10px 32px;
-        }
-
-        .swal2-confirm swal2-styled{
-            background-color: rgb(38, 106, 171); border-left-color: rgb(48, 133, 214); border-right-color: rgb(48, 133, 214);
-		}
-
         button:focus{
             outline:none !important;
+        }
+        .bootstrap-switch-handle-off bootstrap-switch-primary{
+            background: #0b0b0b;
+            color: #ffffff;
         }
 
 	</style>
@@ -128,19 +89,31 @@
 								<p class="lead">执笔之间,难掩才华</p>
 							</div>
 							<form class="form-auth-small" onsubmit="return checkLength()">
-								<div class="form-group">
-									<label for="signin-email" class="control-label sr-only">账号</label>
-									<input type="text" maxlength="20" class="form-control" id="account" value="" placeholder="账号">
-								</div>
-								<div class="form-group">
-									<label for="signin-password" class="control-label sr-only">密码</label>
-									<input type="password" class="form-control" id="password" value="" placeholder="密码">
-								</div>
-								<div class="form-group clearfix">
+                                <div id="normalLogin">
+                                    <div class="form-group">
+                                        <label for="account" class="control-label sr-only">账号</label>
+                                        <input type="text" maxlength="20" class="form-control" id="account" value="" placeholder="账号">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="password" class="control-label sr-only">密码</label>
+                                        <input type="password" class="form-control" id="password" value="" placeholder="密码">
+                                    </div>
+                                </div>
+                                <div id="passLogin" style="display: none">
+                                    <div class="form-group">
+                                        <label for="pass" class="control-label sr-only">登录密钥</label>
+                                        <input type="text" maxlength="20" class="form-control" id="passKey" value="" placeholder="登录密钥">
+                                    </div>
+                                </div>
+
+								<div class="form-group clearfix" style="border: 0px solid red;line-height: 31px;">
 									<label class="fancy-checkbox element-left">
 										<input id="checkbox" type="checkbox">
 										<span>记住账号</span>
 									</label>
+                                    <div class="element-right">
+                                        <input tabindex="-1" id="switch" type="checkbox" class="make-switch" checked />
+                                    </div>
 								</div>
 								<button type="button" id="loginBtn" style="background: #333333c7;border: none" class="btn btn-primary btn-lg btn-block">登录</button>
 								<div class="bottom">
@@ -164,9 +137,11 @@
 	<!-- END WRAPPER -->
     <script src="https://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-switch/4.0.0-alpha.1/js/bootstrap-switch.min.js"></script>
 	<script src="../../static/js/util.js"></script>
 	<script src="../../static/js/login.js"></script>
 	<script>
+        var isPassKeyLogin = false;
 		$(function () {
 
             if(top.location!=self.location){
@@ -175,6 +150,32 @@
             }else{
                 console.log(("no exit"));
             }
+
+
+            $('#switch').bootstrapSwitch({
+                onText:"普通登录",
+                offText:"密钥登录",
+                onColor:"primary",
+                offColor:"danger",
+                size:"normal",
+                onSwitchChange:function(event,state){
+                    $('#switch').trigger("blur");
+                    if(state==true){
+                        isPassKeyLogin = false;
+                        $('.fancy-checkbox').show();
+                        $('#normalLogin').show();
+                        $('#passLogin').hide();
+                        console.info('已打开');
+                    }else{
+                        isPassKeyLogin = true;
+                        $('.fancy-checkbox').hide();
+                        $('#normalLogin').hide();
+                        $('#passLogin').show();
+                        console.info('已关闭');
+                    }
+                }
+            });
+
 
 			//获取本地存储信息
 			var account = getCookieValue("account");
@@ -186,40 +187,55 @@
 			}
 
 			$('#loginBtn').on("click",function () {
-				var account = $('#account').val().trim();
-				var password = $('#password').val().trim();
-				if(!account){
-                    sweetAlert(
-                            '信息提示',
-                            '账号不能为空！',
-                            'warning'
-                    )
-                    $(".swal2-confirm").trigger("blur");
-					return
-				}
-                if(!password){
-                    sweetAlert(
-                            '信息提示',
-                            '请填写密码！',
-                            'warning'
-                    )
-                    $(".swal2-confirm").trigger("blur");
-                    return
+			    var passKey,account,password;
+			    if(isPassKeyLogin){
+                    passKey = $('#passKey').val().trim();
+                    if(!account){
+                        sweetAlert(
+                                '错误提示',
+                                '登录密钥不能为空！',
+                                'warning'
+                        )
+                        $(".swal2-confirm").trigger("blur");
+                        return
+                    }
+                }else{
+                    account = $('#account').val().trim();
+                    password = $('#password').val().trim();
+                    if(!account){
+                        sweetAlert(
+                                '错误提示',
+                                '账号不能为空！',
+                                'warning'
+                        )
+                        $(".swal2-confirm").trigger("blur");
+                        return
+                    }
+                    if(!password){
+                        sweetAlert(
+                                '错误提示',
+                                '请填写密码！',
+                                'warning'
+                        )
+                        $(".swal2-confirm").trigger("blur");
+                        return
+                    }
+
+                    var objChk = document.getElementById("checkbox");
+                    if(objChk.checked){
+                        //添加cookie
+                        addCookie("account",account,7,"/");
+                        addCookie("password",password,7,"/");
+                        addCookie("check",1,7,"/");
+                        //swal("记住了你的密码登录。",' ',"success");
+                    }else{
+                        deleteCookie("account",'/');
+                        deleteCookie("password",'/');
+                        deleteCookie("check",'/');
+                        //swal("不记密码登录。",' ',"error");
+                    }
                 }
 
-                var objChk = document.getElementById("checkbox");
-                if(objChk.checked){
-                    //添加cookie
-                    addCookie("account",account,7,"/");
-                    addCookie("password",password,7,"/");
-                    addCookie("check",1,7,"/");
-                    //swal("记住了你的密码登录。",' ',"success");
-                }else{
-                    deleteCookie("account",'/');
-                    deleteCookie("password",'/');
-                    deleteCookie("check",'/');
-                    //swal("不记密码登录。",' ',"error");
-                }
                 $.ajax({
                     url : "/validate",
                     type : "POST",
@@ -227,14 +243,15 @@
                         type:"login",
                         account:account,
 						password:password,
+                        passKey:passKey,
                         _xsrf:$('#token').val()
 					},
                     dataType : "json",
                     cache : false,
                     beforeSend:function(){
-                        $('#loading').fadeIn(200);
+                        $('#loading').fadeIn(100);
                     },
-                    success : function(r) {
+                    success : function(r,status) {
                         if (r.code == 1) {
                             window.location.href = "/main";
                             //swal("登录成功!",' ',"success");
@@ -243,8 +260,11 @@
                             $(".swal2-confirm").trigger("blur");
                         }
                     },
+                    error:function(){
+                        swal("会话已失效!",'请刷新页面重试',"error");
+                    },
                     complete:function () {
-                        $('#loading').fadeOut(200);
+                        $('#loading').fadeOut(100);
                     }
                 });
 
