--- a/views/main/index.html
+++ b/views/main/index.html
@@ -189,7 +189,7 @@
 						<li onclick="redirect('likes',this)"><i class="lnr lnr-heart"></i> <span>我的喜欢</span></li>
 						<li onclick="redirect('news',this)"><i class="lnr lnr-envelope"></i> <span>消息提醒</span></li>
 						<li onclick="redirect('profile',this)"><i class="lnr lnr-user"></i> <span>个人设置</span></li>
-						<li id="last" onclick="redirect('',this)">
+						<li style="display: none" id="last" onclick="redirect('',this)">
 							<a href="#subPages"  data-toggle="collapse" class="collapsed"><i class="lnr lnr-inbox"></i> <span>基础信息</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
 							<div id="subPages" class="collapse " style="margin-top: 8px;">
 								<ul class="nav" >
@@ -227,6 +227,7 @@
 	<script src="../../static/back/assets/vendor/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 	<script src="../../static/back/assets/scripts/klorofil-common.js"></script>
     <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
+	<script src="../../static/js/util.js"></script>
 	<script>
 		var userInfo;
 		var token;
@@ -242,7 +243,14 @@
 		$(function () {
 			userInfo = {{.userInfo}};
 			console.log(userInfo);
+			if(userInfo.Type>2){
+                $('#last').show();
+			}
 			//$('#account').html(userInfo.Account);
+			if(isPhone()){
+			    $('.btn-toggle-fullwidth').find("i").removeClass("lnr-arrow-left-circle");
+                $('.btn-toggle-fullwidth').find("i").addClass("lnr-arrow-right-circle");
+			}
         })
         function redirect(htmlName,obj){
             $('#navUl li').each(function (index) {//全置默认
