--- a/views/main/home.html
+++ b/views/main/home.html
@@ -9,53 +9,206 @@
     <!-- Favicon -->
     <link rel="icon" type="image/ico" href="../../static/img/logo/logoPic.png">
     <link rel="stylesheet" href="../../static/css/root.css">
+    <style>
+
+        .resume-item{
+            padding: 0px;
+            margin-bottom: 0px;
+            border: 1px solid #DCE6EB;
+            margin-bottom: 15px;
+        }
+        .resume-item:hover{
+            border-color:#6195FF;
+        }
+        .resume-item img {
+            display: block;
+            margin: auto;
+            max-width: 100%;
+            height: auto;
+            transition: opacity 0.35s, -webkit-transform 0.35s;
+            transition: opacity 0.35s, transform 0.35s;
+            -o-transition: opacity 0.35s, -o-transform 0.35s;
+            vertical-align: middle;
+        }
+        .resume-item .head{
+            box-sizing:inherit;
+            width: 100%;
+            background: rgba(43, 51, 62, 0.65);
+            color: #ffffff;
+            position: relative;
+            top:0px;
+            padding: 10px;
+        }
+        .resume-item .bottom{
+            width: calc(100% - 40px);
+            box-sizing:inherit;
+            text-align: center;
+            position: absolute;
+            bottom:15px;
+            padding-bottom: 15px;
+        }
+        .resume-item .used{
+            width: calc(100% - 32px);
+            box-sizing:inherit;
+            text-align: center;
+            position: absolute;
+            bottom:16px;
+            color: #ffffff;
+            font-size: 18px;
+            background: rgba(245,0,0,0.75);
+            padding-top: 15px;
+            padding-bottom: 14px;
+        }
+    </style>
 </head>
-<body>
+<body style="padding-bottom: 15%">
+<div id="loading" class="loading-wrap" style="display: block;">
+    <div class="loader" >
+        <div class="la-ball-clip-rotate-multiple la-3x">
+            <div></div>
+            <div></div>
+        </div>
+        <div class="loaderTxt">数据交互中...</div>
+    </div>
+</div>
 <div class="panel panel-headline">
     <div class="panel-heading">
         <h3 class="panel-title">首页</h3>
-        <p class="panel-subtitle">Period: Oct 14, 2016 - Oct 21, 2016</p>
+        <hr>
     </div>
     <div class="panel-body">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="metric">
-                    <span class="icon"><i class="fa fa-download"></i></span>
-                    <p>
-                        <span class="number">1,252</span>
-                        <span class="title">Downloads</span>
-                    </p>
+        <div class="row" id="resumeWrap">
+            <div class="col-md-3" >
+                <div class="resume-item">
+                    <div class="head">
+                        <h4>全屏简约个人主页模板</h4>
+                        <div class="type">分类:时尚创意</div>
+                    </div>
+                    <img src="../../static/img/zooori.jpg">
+                    <div class="bottom">
+                        <button class="btn btn-primary">使用模板</button>&nbsp;&nbsp;&nbsp;
+                        <button class="btn btn-default">预览模板</button>
+                    </div>
+                    <div class="used" style="display: none">已使用</div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="metric">
-                    <span class="icon"><i class="fa fa-shopping-bag"></i></span>
-                    <p>
-                        <span class="number">203</span>
-                        <span class="title">Sales</span>
-                    </p>
+            <div class="col-md-3" >
+                <div class="resume-item">
+                    <div class="head">
+                        <h4>全屏简约个人主页模板</h4>
+                        <div class="type">分类:时尚创意</div>
+                    </div>
+                    <img src="../../static/img/zooori.jpg">
+                    <div class="bottom">
+                        <button class="btn btn-primary">使用模板</button>&nbsp;&nbsp;&nbsp;
+                        <button class="btn btn-default">预览模板</button>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="metric">
-                    <span class="icon"><i class="fa fa-eye"></i></span>
-                    <p>
-                        <span class="number">274,678</span>
-                        <span class="title">Visits</span>
-                    </p>
+            <div class="col-md-3" >
+                <div class="resume-item">
+                    <div class="head">
+                        <h4>全屏简约个人主页模板</h4>
+                        <div class="type">分类:时尚创意</div>
+                    </div>
+                    <img src="../../static/img/zooori.jpg">
+                    <div class="bottom">
+                        <button class="btn btn-primary">使用模板</button>&nbsp;&nbsp;&nbsp;
+                        <button class="btn btn-default">预览模板</button>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="metric">
-                    <span class="icon"><i class="fa fa-bar-chart"></i></span>
-                    <p>
-                        <span class="number">35%</span>
-                        <span class="title">Conversions</span>
-                    </p>
+            <div class="col-md-3" >
+                <div class="resume-item">
+                    <div class="head">
+                        <h4>全屏简约个人主页模板</h4>
+                        <div class="type">分类:时尚创意</div>
+                    </div>
+                    <img src="../../static/img/zooori.jpg">
+                    <div class="bottom">
+                        <button class="btn btn-primary">使用模板</button>&nbsp;&nbsp;&nbsp;
+                        <button class="btn btn-default">预览模板</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script>
+
+    $(function () {
+        $("#token", parent.document).val({{._xsrf}});
+
+    });
+
+    //获取所有模板
+    var dataAll = [];
+    var dataMade = [];
+    $.post("/index/resume/list", {_xsrf:{{._xsrf}}},function (r1) {
+        if(r1.code==1){
+            dataAll = r1.data;
+            //获取已使用模板
+            $.post("/main/resume/made", {_xsrf:{{._xsrf}}},function (r2) {
+                if(r2.code==1){
+                    dataMade = r2.data;
+                    for(var i=0;i<dataAll.length;i++){
+                        var eid = dataAll[i].Eid;
+                        dataAll[i].isUse = false;
+                        for(var j=0;j<dataMade.length;j++){
+                            var rid = dataMade[j].Rid;
+                            if(eid===rid){
+                                dataAll[i].isUse = true;
+                                break;
+                            }
+                        }
+                    }
+                    $('#loading').fadeOut(200);
+                    //渲染ui
+                    console.info(dataAll);
+                    $('#resumeWrap').html("");
+                    for(var k=0;k<dataAll.length;k++){
+                        var obj = dataAll[k];
+                        var title = obj.Name;
+                        var type = obj.Type;
+                        var imgUrl = "/file/"+obj.Img;
+                        var eid = obj.Eid;
+                        var isUse = obj.isUse;
+                        var isShow = "none";
+                        if(isUse){
+                            isShow = "block";
+                        }
+                        $('#resumeWrap').append('<div class="col-md-3" >\n' +
+                                '                <div class="resume-item">\n' +
+                                '                    <div class="head">\n' +
+                                '                        <h4>'+title+'</h4>\n' +
+                                '                        <div class="type">分类:'+type+'</div>\n' +
+                                '                    </div>\n' +
+                                '                    <img src="'+imgUrl+'">\n' +
+                                '                    <div class="bottom">\n' +
+                                '                        <button onclick="useModel(\''+eid+'\')" class="btn btn-primary">使用模板</button>&nbsp;&nbsp;&nbsp;\n' +
+                                '                        <button onclick="previewModel(\''+eid+'\')" class="btn btn-default">预览模板</button>\n' +
+                                '                    </div>\n' +
+                                '                    <div class="used" style="display: '+isShow+'">已使用</div>\n' +
+                                '                </div>\n' +
+                                '            </div>')
+                    }
+
+                }
+            });
+        }
+
+    });
+
+    function useModel(rid) {
+
+    }
+    function previewModel(rid) {
+        var url = "/resume?v="+rid;
+        window.open(url,"_blank");
+    }
+
+</script>
+
 </body>
 </html>
