--- a/views/login/login.html
+++ b/views/login/login.html
@@ -99,8 +99,8 @@
                                         <input type="password" class="form-control" id="password" value="" placeholder="密码">
                                     </div>
                                 </div>
-                                <div id="passLogin" style="display: none">
-                                    <div class="form-group">
+                                <div id="passLogin" style="display: none;height: 105px;padding-top:45px;">
+                                    <div class="form-group" >
                                         <label for="pass" class="control-label sr-only">登录密钥</label>
                                         <input type="text" maxlength="20" class="form-control" id="passKey" value="" placeholder="登录密钥">
                                     </div>
@@ -190,7 +190,7 @@
 			    var passKey,account,password;
 			    if(isPassKeyLogin){
                     passKey = $('#passKey').val().trim();
-                    if(!account){
+                    if(!passKey){
                         sweetAlert(
                                 '错误提示',
                                 '登录密钥不能为空！',
