--- a/views/main/home.html
+++ b/views/main/home.html
@@ -9,6 +9,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/ico" href="../../static/img/logo/logoPic.png">
     <link rel="stylesheet" href="../../static/css/root.css">
+    <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
     <style>
 
         .resume-item{
@@ -33,11 +34,14 @@
         .resume-item .head{
             box-sizing:inherit;
             width: 100%;
-            background: rgba(43, 51, 62, 0.65);
+            background: rgba(43, 51, 62, 0.95);
             color: #ffffff;
             position: relative;
             top:0px;
-            padding: 10px;
+            padding:8px;
+        }
+        .resume-item .head h{
+            margin-bottom: 5px;
         }
         .resume-item .bottom{
             width: calc(100% - 40px);
@@ -45,7 +49,7 @@
             text-align: center;
             position: absolute;
             bottom:15px;
-            padding-bottom: 15px;
+            padding-bottom: 10px;
         }
         .resume-item .used{
             width: calc(100% - 32px);
@@ -55,14 +59,14 @@
             bottom:16px;
             color: #ffffff;
             font-size: 18px;
-            background: rgba(245,0,0,0.75);
+            background: rgba(245,124,0,0.75);
             padding-top: 15px;
             padding-bottom: 14px;
         }
     </style>
 </head>
 <body style="padding-bottom: 15%">
-<div id="loading" class="loading-wrap" style="display: block;">
+<div id="loading" class="loading-wrap" style="display: none;">
     <div class="loader" >
         <div class="la-ball-clip-rotate-multiple la-3x">
             <div></div>
@@ -139,7 +143,6 @@
 
     $(function () {
         $("#token", parent.document).val({{._xsrf}});
-
     });
 
     //获取所有模板
@@ -170,9 +173,10 @@
                     for(var k=0;k<dataAll.length;k++){
                         var obj = dataAll[k];
                         var title = obj.Name;
-                        var type = obj.Type;
+                        var type = obj.Theme;
                         var imgUrl = "/file/"+obj.Img;
                         var eid = obj.Eid;
+                        var uid = obj.Uid;
                         var isUse = obj.isUse;
                         var isShow = "none";
                         if(isUse){
@@ -181,13 +185,13 @@
                         $('#resumeWrap').append('<div class="col-md-3" >\n' +
                                 '                <div class="resume-item">\n' +
                                 '                    <div class="head">\n' +
-                                '                        <h4>'+title+'</h4>\n' +
+                                '                        <h4 style="margin-bottom: 5px;margin-top: 5px;">'+title+'</h4>\n' +
                                 '                        <div class="type">分类:'+type+'</div>\n' +
                                 '                    </div>\n' +
                                 '                    <img src="'+imgUrl+'">\n' +
                                 '                    <div class="bottom">\n' +
-                                '                        <button onclick="useModel(\''+eid+'\')" class="btn btn-primary">使用模板</button>&nbsp;&nbsp;&nbsp;\n' +
-                                '                        <button onclick="previewModel(\''+eid+'\')" class="btn btn-default">预览模板</button>\n' +
+                                '                        <button onclick="useModel(\''+uid+'\',\''+eid+'\',this)" class="btn btn-primary">使用模板</button>&nbsp;&nbsp;&nbsp;\n' +
+                                '                        <button onclick="previewModel(\''+eid+'\')" class="btn btn-success">预览模板</button>\n' +
                                 '                    </div>\n' +
                                 '                    <div class="used" style="display: '+isShow+'">已使用</div>\n' +
                                 '                </div>\n' +
@@ -200,8 +204,15 @@
 
     });
 
-    function useModel(rid) {
-
+    function useModel(uid,rid,obj) {
+        $.post("/main/resume/use",{_xsrf:{{._xsrf}},uid:uid,rid:rid},function (r) {
+            if(r.code===1){
+                window.parent.swalInfo("即刻提示","操作成功","success");
+                $(obj).parent().next().css("display","block");
+            }else{
+                window.parent.swalInfo("即刻提示",r.msg,"error");
+            }
+        });
     }
     function previewModel(rid) {
         var url = "/resume?v="+rid;
