--- a/views/main/index.html
+++ b/views/main/index.html
@@ -142,7 +142,7 @@
                             aria-hidden="true">×
                     </button>
                     <h3 style="font-weight: 700" class="modal-title" id="editModalLabel">
-                        编辑简历信息<span style="font-size: 13px;font-weight: 300">(<span class="red">*</span>为必填)</span>
+                        编辑简历<span style="font-size: 13px;font-weight: 300">(<span class="red">*</span>为必填)</span>
                     </h3>
                     <span class="form-label" id="pageTitle">基础信息</span>
                     <span class="form-label" style="float: right"><span id="curPage">1</span>/5</span>
@@ -150,30 +150,16 @@
                 <div class="modal-body">
                     <form class="form-horizontal" autocomplete="off">
 
-                        <div  id="page1" >
+                        <div class="page"  id="page1" >
                             <div class="form-group">
-                                <label class="col-sm-3 control-label form-label">更新链接<span class="red"></span></label>
-                                <div class="col-sm-8">
+                                <label class="col-sm-3 control-label form-label">重置链接<span class="red"></span></label>
+                                <div class="col-sm-8" id="reset">
                                     <input id="editId" type="hidden">
                                     <input id="editUid" type="hidden">
                                     <input id="editRid" type="hidden">
-                                    <div class="radio" style="margin-top:5px;float: left;border: 0px solid red;height: 35px;line-height: 15px;">
-                                        <input style="outline: none !important;" type="radio" onclick="tipTip('更新链接将导致您之前分享的简历链接不可用')" name="updateUrl" id="updateUrl01" value="是" >
-                                        <label for="updateUrl01">
-                                            是
-                                        </label>
-                                    </div>
-                                    <div class="radio" style="margin-top:5px;float: left;border: 0px solid red;height: 35px;line-height: 15px;margin-left: 8px;">
-                                        <input tabindex="-1" type="radio"  name="updateUrl" id="updateUrl02" value="否" checked="">
-                                        <label for="updateUrl02">
-                                            否
-                                        </label>
-                                    </div>
-                                    <br>
-                                    <div style="margin-top: 20px;font-size: 12px;color: #AEB7C2">
-                                        <p>tips:更新链接将导致您之前分享的简历链接及二维码不可访问</p>
-                                    </div>
-
+                                    <input id="editSid" type="hidden">
+                                    <input id="editIndex" type="hidden">
+                                    <button type="button" id="resetBtn" class="btn btn-danger">一键重置</button>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -196,7 +182,7 @@
                                 <label class="col-sm-3 control-label form-label">性别</label>
                                 <div class="col-sm-8">
                                     <div class="radio" style="margin-top:5px;float: left;border: 0px solid red;height: 35px;line-height: 15px;">
-                                        <input style="outline: none !important;" type="radio" name="radio" id="radio1" value="男" checked="">
+                                        <input style="outline: none !important;" type="radio" name="radio" id="radio1" value="男">
                                         <label for="radio1">
                                             男
                                         </label>
@@ -234,7 +220,7 @@
                             </div>
                         </div>
 
-                        <div id="page2" style="display: none">
+                        <div class="page" id="page2" style="display: none">
 
                             <div class="form-group">
                                 <label class="col-sm-3 control-label form-label">籍贯信息<span class="red"></span></label>
@@ -278,7 +264,7 @@
                             </div>
                         </div>
 
-                        <div id="page3" style="display: none">
+                        <div class="page" id="page3" style="display: none">
                             <div id="workWrap">
                                 <div id="workItem" class="workItem" style="margin-top: 3px;padding-top: 5px;">
                                     <div class="del4work" style="width: 100%;text-align: right;margin-top: -10px;display: none"><button class="btn btn-danger btn-xs" title="删除当前项"><i class="fa fa-trash-o" aria-hidden="true"></i></button></div>
@@ -324,7 +310,7 @@
                             </div>
                         </div>
 
-                        <div id="page4" style="display: none">
+                        <div class="page" id="page4" style="display: none">
                             <div id="skillWrap">
                                 <div class="skillItem" style="margin-top: 3px;padding-top: 5px;">
                                     <div class="del4skill" style="width: 100%;text-align: right;margin-top: -10px;display: none"><button class="btn btn-danger btn-xs" title="删除当前项"><i class="fa fa-trash-o" aria-hidden="true"></i></button></div>
@@ -353,7 +339,7 @@
                             </div>
                         </div>
 
-                        <div id="page5" style="display: none">
+                        <div class="page" id="page5" style="display: none">
                             <div id="eduWrap">
                                 <div class="eduItem" style="margin-top: 3px;padding-top: 5px;">
                                     <div class="del4edu" style="width: 100%;text-align: right;margin-top: -10px;display: none"><button class="btn btn-danger btn-xs" title="删除当前项"><i class="fa fa-trash-o" aria-hidden="true"></i></button></div>
